# backend/docs/swagger.yaml
@@ -1594,6 +1594,47 @@ definitions:
         example: contacts.statusUpdated
         type: string
     type: object
+  internal_proj_docserver_handler.DocContentResponse:
+    properties:
+      content:
+        example: |-
+          # Documentation
+
+          This is the content of the markdown file.
+        type: string
+      path:
+        example: docs/README.md
+        type: string
+    type: object
+  internal_proj_docserver_handler.DocFile:
+    properties:
+      children:
+        items:
+          $ref: '#/definitions/internal_proj_docserver_handler.DocFile'
+        type: array
+      name:
+        example: README.md
+        type: string
+      path:
+        example: docs/README.md
+        type: string
+      type:
+        enum:
+        - file
+        - directory
+        example: file
+        type: string
+    type: object
+  internal_proj_docserver_handler.DocFilesResponse:
+    properties:
+      files:
+        items:
+          $ref: '#/definitions/internal_proj_docserver_handler.DocFile'
+        type: array
+      rootPath:
+        example: ./docs
+        type: string
+    type: object
   internal_proj_marketplace_handler.AttributeCreateResponse:
     properties:
       id:
@@ -5623,6 +5664,69 @@ paths:
       summary: Обновить настройки приватности
       tags:
       - contacts
+  /api/v1/docs/content:
+    get:
+      consumes:
+      - application/json
+      description: Returns the content of a specific markdown file
+      parameters:
+      - description: File path relative to docs root
+        in: query
+        name: path
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: File content
+          schema:
+            allOf:
+            - $ref: '#/definitions/backend_pkg_utils.SuccessResponseSwag'
+            - properties:
+                data:
+                  $ref: '#/definitions/internal_proj_docserver_handler.DocContentResponse'
+              type: object
+        "400":
+          description: docs.pathRequired or docs.invalidPath or docs.onlyMarkdownAllowed
+          schema:
+            $ref: '#/definitions/backend_pkg_utils.ErrorResponseSwag'
+        "404":
+          description: docs.fileNotFound
+          schema:
+            $ref: '#/definitions/backend_pkg_utils.ErrorResponseSwag'
+        "500":
+          description: docs.readError
+          schema:
+            $ref: '#/definitions/backend_pkg_utils.ErrorResponseSwag'
+      summary: Get file content
+      tags:
+      - docs
+  /api/v1/docs/files:
+    get:
+      consumes:
+      - application/json
+      description: Returns the hierarchical list of markdown files in the documentation
+        directory
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of documentation files
+          schema:
+            allOf:
+            - $ref: '#/definitions/backend_pkg_utils.SuccessResponseSwag'
+            - properties:
+                data:
+                  $ref: '#/definitions/internal_proj_docserver_handler.DocFilesResponse'
+              type: object
+        "500":
+          description: docs.scanError
+          schema:
+            $ref: '#/definitions/backend_pkg_utils.ErrorResponseSwag'
+      summary: Get documentation files
+      tags:
+      - docs
   /api/v1/geocode/cities:
     get:
       consumes:
